--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
 			<groupId>org.deegree</groupId>
 			<artifactId>deegree-core-geometry</artifactId>
 			<version>3.3.1</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.deegree</groupId>
@@ -92,11 +98,6 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jcl-over-slf4j</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>log4j-over-slf4j</artifactId>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
