small hickup and cosmetic changes

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
 	<packaging>jar</packaging>
 	<name>geomajas-layer-deegree</name>
 
+        <properties>
+            <checkstyle.skip>true</checkstyle.skip>
+            <skipTests>true</skipTests>
+        </properties>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
